Fix Java 8 compatibility and add pre-compiled classes/ECJ compiler